[package]
name = "wgpu"
version = "0.1.0"
author = "L1chik"
edition = "2021"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wgpu = "0.13.1"
cgmath = "0.18.0"

env_logger = "0.9.0"
log = "0.4.17"
winit = "0.27.2"
pollster = "0.2.5"
anyhow = "1.0.63"

futures = "0.3.24"
gfx-hal = "0.9.0"
image = "0.24.3"
